--- a/Laser Turret Aim.csproj
+++ b/Laser Turret Aim.csproj
@@ -33,8 +33,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Google.Apis, Version=1.51.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>packages\Google.Apis.1.51.0\lib\net45\Google.Apis.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.Apis.Core, Version=1.51.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>packages\Google.Apis.Core.1.51.0\lib\net45\Google.Apis.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.Apis.PlatformServices, Version=1.51.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>packages\Google.Apis.1.51.0\lib\net45\Google.Apis.PlatformServices.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Speech" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,7 +78,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +93,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\comehere.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\hellofriend.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\iseeyou.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\stillthere.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_deploy.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_retract.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_turret_autosearch_5.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_turret_disabled_4.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_turret_fire_4x_01.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_turret_fire_4x_02.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_turret_fire_4x_03.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="portal\Turret_turret_retire_1.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
